// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsList should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        My Apps
      </h1>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
          >
            <div
              class="mocked-styled-7 el-card-main-wrap"
            >
              <div
                class="mocked-styled-28 el-avatar"
                role="img"
                title="A profile image"
              >
                <div
                  aria-label="A generic placeholder image"
                  class="mocked-styled-144 el-placeholder-image"
                  role="img"
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
              >
                <h5
                  class="mocked-styled-8 el-card-heading"
                >
                  MOCK_APP_NAME
                </h5>
                <h6
                  class="mocked-styled-9 el-card-sub-heading"
                />
                <h6
                  class="mocked-styled-10 el-card-sub-heading-additional"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
          >
            <div
              class="mocked-styled-7 el-card-main-wrap"
            >
              <div
                class="mocked-styled-28 el-avatar"
                role="img"
                title="A profile image"
              >
                <div
                  aria-label="A generic placeholder image"
                  class="mocked-styled-144 el-placeholder-image"
                  role="img"
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
              >
                <h5
                  class="mocked-styled-8 el-card-heading"
                >
                  MOCK_APP_NAME_ANOTHER
                </h5>
                <h6
                  class="mocked-styled-9 el-card-sub-heading"
                />
                <h6
                  class="mocked-styled-10 el-card-sub-heading-additional"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r0:"
      >
        <button
          aria-controls=":r0:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      My Apps
    </h1>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
        >
          <div
            class="mocked-styled-7 el-card-main-wrap"
          >
            <div
              class="mocked-styled-28 el-avatar"
              role="img"
              title="A profile image"
            >
              <div
                aria-label="A generic placeholder image"
                class="mocked-styled-144 el-placeholder-image"
                role="img"
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </div>
            </div>
            <div
              class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
            >
              <h5
                class="mocked-styled-8 el-card-heading"
              >
                MOCK_APP_NAME
              </h5>
              <h6
                class="mocked-styled-9 el-card-sub-heading"
              />
              <h6
                class="mocked-styled-10 el-card-sub-heading-additional"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
        >
          <div
            class="mocked-styled-7 el-card-main-wrap"
          >
            <div
              class="mocked-styled-28 el-avatar"
              role="img"
              title="A profile image"
            >
              <div
                aria-label="A generic placeholder image"
                class="mocked-styled-144 el-placeholder-image"
                role="img"
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </div>
            </div>
            <div
              class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
            >
              <h5
                class="mocked-styled-8 el-card-heading"
              >
                MOCK_APP_NAME_ANOTHER
              </h5>
              <h6
                class="mocked-styled-9 el-card-sub-heading"
              />
              <h6
                class="mocked-styled-10 el-card-sub-heading-additional"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r0:"
    >
      <button
        aria-controls=":r0:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsList should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        My Apps
      </h1>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
          >
            <div
              class="mocked-styled-7 el-card-main-wrap"
            >
              <div
                class="mocked-styled-28 el-avatar"
                role="img"
                title="A profile image"
              >
                <div
                  aria-label="A generic placeholder image"
                  class="mocked-styled-144 el-placeholder-image"
                  role="img"
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
              >
                <h5
                  class="mocked-styled-8 el-card-heading"
                >
                  MOCK_APP_NAME
                </h5>
                <h6
                  class="mocked-styled-9 el-card-sub-heading"
                />
                <h6
                  class="mocked-styled-10 el-card-sub-heading-additional"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
          >
            <div
              class="mocked-styled-7 el-card-main-wrap"
            >
              <div
                class="mocked-styled-28 el-avatar"
                role="img"
                title="A profile image"
              >
                <div
                  aria-label="A generic placeholder image"
                  class="mocked-styled-144 el-placeholder-image"
                  role="img"
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
              >
                <h5
                  class="mocked-styled-8 el-card-heading"
                >
                  MOCK_APP_NAME_ANOTHER
                </h5>
                <h6
                  class="mocked-styled-9 el-card-sub-heading"
                />
                <h6
                  class="mocked-styled-10 el-card-sub-heading-additional"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r2:"
      >
        <button
          aria-controls=":r2:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      My Apps
    </h1>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
        >
          <div
            class="mocked-styled-7 el-card-main-wrap"
          >
            <div
              class="mocked-styled-28 el-avatar"
              role="img"
              title="A profile image"
            >
              <div
                aria-label="A generic placeholder image"
                class="mocked-styled-144 el-placeholder-image"
                role="img"
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </div>
            </div>
            <div
              class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
            >
              <h5
                class="mocked-styled-8 el-card-heading"
              >
                MOCK_APP_NAME
              </h5>
              <h6
                class="mocked-styled-9 el-card-sub-heading"
              />
              <h6
                class="mocked-styled-10 el-card-sub-heading-additional"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-fade-in mock-css.
  cursor: pointer;
 el-card-wrap"
        >
          <div
            class="mocked-styled-7 el-card-main-wrap"
          >
            <div
              class="mocked-styled-28 el-avatar"
              role="img"
              title="A profile image"
            >
              <div
                aria-label="A generic placeholder image"
                class="mocked-styled-144 el-placeholder-image"
                role="img"
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </div>
            </div>
            <div
              class="el-card-sub-heading-wrap-avatar el-card-heading-wrap"
            >
              <h5
                class="mocked-styled-8 el-card-heading"
              >
                MOCK_APP_NAME_ANOTHER
              </h5>
              <h6
                class="mocked-styled-9 el-card-sub-heading"
              />
              <h6
                class="mocked-styled-10 el-card-sub-heading-additional"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r2:"
    >
      <button
        aria-controls=":r2:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
